A beginning is the time for taking the most delicate care that the balances are 
correct. This every sister of the Bene Gesserit knows. To begin your study of 
the life of Muad'Dib, then, take care that you first place him in his time: 
born in the 57th year of the Padishah Emperor, Shaddam IV. And take the most 
special care that you locate Muad'Dib in his place: the planet Arrakis. Do not 
be deceived by the fact that he was born on Caladan and lived his first fifteen 
years there. Arrakis, the planet known as Dune, is forever his place.

  -- from "Manual of Muad'Dib" by the Princess Irulan
%
To attempt an understanding of Muad'Dib without understanding his mortal 
enemies, the Harkonnens, is to attempt seeing Truth without knowing Falsehood. 
It is the attempt to see the Light without knowing Darkness. It cannot be.

  -- from "Manual of Muad'Dib" by the Princess Irulan
%
Thus spoke St. Alia-of-the-Knife: "The Reverend Mother must combine the 
seductive wiles of a courtesan with the untouchable majesty of a virgin 
goddess, holding these attributes in tension so long as the powers of her
youth endure. For when youth and beauty have gone, she will find that the 
place-between, once occupied by tension, has become a wellspring of cunning
and resourcefulness."

  -- from "Muad'Dib, Family Commentaries" by the Princess Irulan
%
You have read that Muad'Dib had no playmates his own age on Caladan. The 
dangers were too great. But Muad'Dib did have wonderful companion-teachers. 
There was Gurney Halleck, the troubadour-warrior. You will sing some of 
Gurney's songs, as you read along in this book. There was Thufir Hawat, the old 
Mentat Master of Assassins, who struck fear even into the heart of the Padishah 
Emperor. There were Duncan Idaho, the Swordmaster of the Ginaz; Dr. Wellington 
Yueh, a name black in treachery but bright in knowledge; the Lady Jessica, who 
guided her son in the Bene Gesserit Way, and -- of course -- the Duke Leto, 
whose qualities as a father have long been overlooked.

  -- from "A Child's History of Muad'Dib" by the Princess Irulan
%
YUEH (yu'e), Wellington (weling-tun), Stdrd 10,082-10,191; medical doctor of 
the Suk School (grd Stdrd 10,112); md: Wanna Marcus, B.G. (Stdrd 
10,092-10,186?); chiefly noted as betrayer of Duke Leto Atreides. (Cf: 
Bibliography, Appendix VII [Imperial Conditioning] and Betrayal, The.)

  -- from "Dictionary of Muad'Dib" by the Princess Irulan
%
How do we approach the study of Muad'Dib's father? A man of surpassing warmth 
and surprising coldness was the Duke Leto Atreides. Yet, many facts open the 
way to this Duke: his abiding love for his Bene Gesserit lady; the dreams he 
held for his son; the devotion with which men served him. You see him there -- 
a man snared by Destiny, a lonely figure with his light dimmed behind the glory 
of his son. Still, one must ask: What is the son but an extension of the father?

  -- from "Muad'Dib, Family Commentaries" by the Princess Irulan
%
With the Lady Jessica and Arrakis, the Bene Gesserit system of sowing 
implant-legends through the Missionaria Protectiva came to its full fruition. 
The wisdom of seeding the known universe with a prophecy pattern for the 
protection of B.G. personnel has long been appreciated, but never have we seen 
a condition-ut-extremis with more ideal mating of person and preparation. The 
prophetic legends had taken on Arrakis even to the extent of adopted labels 
(including Reverend Mother, canto and respondu, and most of the Shari-a 
panoplia propheticus). And it is generally accepted now that the Lady Jessica's 
latent abilities were grossly underestimated.

  -- from "Analysis: The Arrakeen Crisis" by the Princess Irulan [Private 
circulation: B.G. file number AR-81088587]
%
"Yueh! Yueh! Yueh!" goes the refrain. "A million deaths were not enough for 
Yueh!"

  -- from "A Child's History of Muad'Dib" by the Princess Irulan
%
Many have marked the speed with which Muad'Dib learned the necessities of 
Arrakis. The Bene Gesserit, of course, know the basis of this speed. For the 
others, we can say that Muad'Dib learned rapidly because his first training was 
in how to learn. And the first lesson of all was the basic trust that he could 
learn. It is shocking to find how many people do not believe they can learn, 
and how many more believe learning to be difficult. Muad'Dib knew that every 
experience carries its lesson.

  -- from "The Humanity of Muad'Dib" by the Princess Irulan
%
What had the Lady Jessica to sustain her in her time of trial? Think you 
carefully on this Bene Gesserit proverb and perhaps you will see: "Any road 
followed precisely to its end leads precisely nowhere. Climb the mountain just 
a little bit to test that it's a mountain. From the top of the mountain, you 
cannot see the mountain."

  -- from "Muad'Dib: Family Commentaries" by the Princess Irulan
%
It is said that the Duke Leto blinded himself to the perils of Arrakis, that he 
walked heedlessly into the pit. Would it not be more likely to suggest he had 
lived so long in the presence of extreme danger he misjudged a change in its 
intensity? Or is it possible he deliberately sacrificed himself that his son 
might find a better life? All evidence indicates the Duke was a man not easily 
hoodwinked.

  -- from "Muad'Dib: Family Commentaries" by the Princess Irulan
%
Over the exit of the Arrakeen landing field, crudely carved as though with
a poor instrument, there was an inscription that Muad'Dib was to repeat many 
times. He saw it that first night on Arrakis, having been brought to the ducal 
command post to participate in his father's first full staff conference.
The words of the inscription were a plea to those leaving Arrakis, but they
fell with dark import on the eyes of a boy who had just escaped a close brush
with death. They said: "O you who know what we suffer here, do not forget us
in your prayers."

  -- from "Manual of Muad'Dib" by the Princess Irulan
%
On that first day when Muad'Dib rode through the streets of Arrakeen with his 
family, some of the people along the way recalled the legends and the prophecy 
and they ventured to shout: "Mahdi!" But their shout was more a question than a 
statement, for as yet they could only hope he was the one foretold as the Lisan 
al-Gaib, the Voice from the Outer World. Their attention was focused, too, on 
the mother, because they had heard she was a Bene Gesserit and it was obvious 
to them that she was like the other Lisan al-Gaib.

  -- from "Manual of Muad'Dib" by the Princess Irulan
%
"There is probably no more terrible instant of enlightenment than the
one in which you discover your father is a man--with human flesh."

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
My father, the Padishah Emperor, took me by the hand one day and I sensed in 
the ways my mother had taught me that he was disturbed. He led me down the Hall 
of Portraits to the ego-likeness of the Duke Leto Atreides. I marked the strong 
resemblance between them--my father and this man in the portrait--both with 
thin, elegant faces and sharp features dominated by cold eyes. 
"Princess-daughter," my father said, "I would that you'd been older when it 
came time for this man to choose a woman." My father was 71 at the time and 
looking no older than the man in the portrait, and I was but 14, yet I remember 
deducing in that instant that my father secretly wished the Duke had been his 
son, and disliked the political necessities that made them enemies.

  -- "In My Father's House" by the Princess Irulan
%
Greatness is a transitory experience. It is never consistent. It depends in 
part upon the myth-making imagination of humankind. The person who experiences 
greatness must have a feeling for the myth he is in. He must reflect what is 
projected upon him. And he must have a strong sense of the sardonic. This is 
what uncouples him from belief in his own pretensions. The sardonic is all that 
permits him to move within himself. Without this quality, even occasional 
greatness will destroy a man.

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
"There is no escape--we pay for the violence of our ancestors. "

  -- from "The Collected Sayings of Muad'Dib" by the Princess Irulan
%
  Do you wrestle with dreams? 
  Do you contend with shadows? 
  Do you move in a kind of sleep? 
  Time has slipped away. 
  Your life is stolen. 
  You tarried with trifles, 
  Victim of your folly.
  
    -- Dirge for Jamis on the Funeral Plain,
       from "Songs of Muad'Dib" by the Princess Irulan
%
There should be a science of discontent. People need hard times
and oppression to develop psychic muscles.

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
Arrakis teaches the attitude of the knife--chopping off what's
incomplete and saying: "Now, it's complete because it's ended here."

  -- from "Collected Sayings of, Muad'Dib" by the Princess Irulan
%
There is a legend that the instant the Duke Leto Atreides died a meteor 
streaked across the skies above his ancestral palace on Caladan.

  -- the Princess Irulan: "Introduction to A Child's History of Muad'Dib"
%
  O Seas of Caladan, 
  O people of Duke Leto-- 
  Citadel of Leto fallen, 
  Fallen forever . . .
  
    -- from "Songs of Muad'Dib" by the Princess Irulan
%
When my father, the Padishah Emperor, heard of Duke Leto's death and the
manner of it, he went into such a rage as we had never before seen. He blamed
my mother and the compact forced on him to place a Bene Gesserit on the throne.
He blamed the Guild and the evil old Baron. He blamed everyone in sight, not 
excepting even me, for he said I was a witch like all the others. And when I 
sought to comfort him, saying it was done according to an older law of 
self-preservation to which even the most ancient rulers gave allegiance, he 
sneered at me and asked if I thought him a weakling. I saw then that he had 
been aroused to this passion not by concern over the dead Duke but by what
that death implied for all royalty. As I look back on it, I think there may
have been some prescience in my father, too, for it is certain that his line
and Muad'Dib's shared common ancestry.

  -- "In My Father's House," by the Princess Irulan
%
My father once told me that respect for the truth comes close to being the 
basis for all morality. "Something cannot emerge from nothing," he said.
This is profound thinking if you understand how unstable "the truth" can be.

  -- from "Conversations with Muad'Dib" by the Princess Irulan
%

Muad'Dib could indeed, see the Future, but you must understand the limits
of this power. Think of sight. You have eyes, yet cannot see without light.
If you are on the floor of a valley, you cannot see beyond your valley.
Just so, Muad'Dib could not always choose to look across the mysterious
terrain. He tells us that a single obscure decision of prophecy, perhaps
the choice of one word over another, could change the entire aspect of the
future. He tells us "The vision of time is broad, but when you pass through
it, time becomes a narrow door." And always, he fought the temptation to
choose a clear, safe course, warning "That path leads ever down into
stagnation."

  -- from "Arrakis Awakening" by the Princess Irulan
%
What do you despise? By this are you truly known.

  -- from "Manual of Muad'Dib" by the Princess Irulan
%
At the age of fifteen, he had already learned silence.

  -- from "A Child's History of Muad'Dib" by the Princess Irulan
%
We came from Caladan--a paradise world for our form of fife. There existed no 
need on Caladan to build a physical paradise or a paradise of the mind--we 
could see the actuality all around us. And the price we paid was the price men 
have always paid for achieving a paradise in this life--we went soft, we lost 
our edge.

  -- from "Muad'Dib: Conversations" by the Princess Irulan
%
Family life of the Royal Creche is difficult for many people to understand,
but I shall try to give you a capsule view of it. My father had only one real 
friend, I think. That was Count Hasimir Fenring, the genetic-eunuch and one of 
the deadliest fighters in the Imperium. The Count, a dapper and ugly little 
man, brought a new slave-concubine to my father one day and I was dispatched
by my mother to spy on the proceedings. All of us spied on my father as a matter 
of self-protection. One of the slave-concubines permitted my father under the 
Bene Gesserit-Guild agreement could not, of course, bear a Royal Successor,
but the intrigues were constant and oppressive in their similarity. We became 
adept, my mother and sisters and I, at avoiding subtle instruments of death.
It may seem a dreadful thing to say, but I 'm not at all sure my father was 
innocent in all these attempts. A Royal Family is not like other families.
Here was a new slave-concubine, then, red-haired like my father, willowy and 
graceful. She had a dancer's muscles, and her training obviously had included 
neuro-enticement. My father looked at her for a long time as she postured 
unclothed before him. Finally he said: "She is too beautiful. We will save her 
as a gift. " You have no idea how much consternation this restraint created in 
the Royal Creche. Subtlety and self-control were, after all, the most deadly 
threats to us all.

  -- "In My Father's House" by the Princess Irulan
%
This Fremen religious adaptation, then, is the source of what we now
recognize as "The Pillars of the Universe," whose Qizara Tafwid are among us
all with signs and proofs and prophecy. They bring us the Arrakeen mystical
fusion whose profound beauty is typified by the stirring music built on the
old forms, but stamped with the new awakening. Who has not heard and been
deeply moved by "The Old Man's Hymn"?

  I drove my feet through a desert 
  Whose mirage fluttered like a host. 
  Voracious for glory, greedy for danger, 
  I roamed the horizons of al-Kulab, 
  Watching time level mountains 
  In its search and its hunger for me. 
  And I saw the sparrows swiftly approach, 
  Bolder than the onrushing wolf. 
  They spread in the tree of my youth.
  I heard the flock in my branches 
  And was caught on their beaks and claws!

  -- from "Arrakis Awakening" by the Princess Irulan
%
Prophecy and prescience--How can they be put to the test in the face of the 
unanswered questions? Consider: How much is actual prediction of the "waveform" 
(as Muad'Dib referred to his vision-image) and how much is the prophet shaping 
the future to fit the prophecy? What of the harmonics inherent in the act of 
prophecy? Does the prophet see the future or does he see a line of weakness,
a fault or cleavage that he may shatter with words or decisions as a 
diamond-cutter shatters his gem with a blow of a knife?

  -- "Private Reflections on Muad'Dib" by the Princess Irulan
%
The Fremen were supreme in that quality the ancients called 
"spannungsbogen"--which is the self-imposed delay between desire for a thing 
and the act of reaching out to grasp that thing.

  -- from "The Wisdom of Muad'Dib" by the Princess Irulan
%
My father, the Padishah Emperor, was 72 yet looked no more than 35 the year
he encompassed the death of Duke Leto and gave Arrakis back to the Harkonnens.
He seldom appeared in public wearing other than a Sardaukar uniform and
a Burseg's black helmet with the imperial lion in gold upon its crest.
The uniform was an open reminder of where his power lay. He was not always
that blatant, though. When he wanted, he could radiate charm and sincerity,
but I often wonder in these later days if anything about him was as it seemed.
I think now he was a man fighting constantly to escape the bars of an invisible
cage. You must remember that he was an emperor, father-head of a dynasty that
reached back into the dimmest history. But we denied him a legal son.
Was this not the most terrible defeat a ruler ever suffered? My mother obeyed
her Sister Superiors where the Lady Jessica disobeyed. Which of them was the
stronger? History already has answered.

  -- "In My Father's House" by the Princess Irulan
%
God created Arrakis to train the faithful.

  -- from "The Wisdom of Muad'Dib" by the Princess Irulan
%
The concept of progress acts as a protective mechanism
to shield us from the terrors of the future.

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
Muad'Dib tells us in "A Time of Reflection" that his first collisions with 
Arrakeen necessities were the true beginnings of his education. He learned then 
how to pole the sand for its weather, learned the language of the wind's 
needles stinging his skin, learned how the nose can buzz with sand-itch and how 
to gather his body's precious moisture around him to guard it and preserve it. 
As his eyes assumed the blue of the Ibad, he learned the Chakobsa way.

  -- Stilgar's preface to "Muad'Dib, the Man" by the Princess Irulan
%
The hands move, the lips move --
Ideas gush from his words, 
And his eyes devour!
He is an island of Selfdom.

  -- description from "A Manual of Muad'Dib" by the Princess Irulan
%
No woman, no man, no child ever was deeply intimate with my father. The closest 
anyone ever came to casual camaraderie with the Padishah Emperor was the 
relationship offered by Count Hasimir Fenring, a companion from childhood. The 
measure of Count Fenring's friendship may be seen first in a positive thing: he 
allayed the Landsraad's suspicions after the Arrakis Affair. It cost more than 
a billion solaris in spice bribes, so my mother said, and there were other 
gifts as well: slave women, royal honors, and tokens of rank. The second major 
evidence of the Count's friendship was negative. He refused to kill a man even 
though it was within his capabilities and my father commanded it. I will relate 
this presently.

  -- "Count Fenring: A Profile" by the Princess Irulan
%
Deep in the human unconscious is a pervasive need for a logical universe that 
makes sense. But the real universe is always one step beyond logic.

  -- from "The Sayings of Muad'Dib" by the Princess Irulan
%
There is in all things a pattern that is part of our universe. It has symmetry, 
elegance, and grace -- those qualities you find always in that which the true 
artist captures. You can find it in the turning of the seasons, in the way sand 
trails along a ridge, in the branch clusters of the creosote bush or the 
pattern of its leaves. We try to copy these patterns in our lives and our 
society, seeking the rhythms, the dances, the forms that comfort. Yet, it is 
possible to see peril in the finding of ultimate perfection. It is clear that 
the ultimate pattern contains its own fixity. In such perfection, all things 
move toward death.

  -- from "The Collected Sayings of Muad'Dib" by the Princess Irulan
%
"Control the coinage and the courts -- let the rabble have the rest." Thus the 
Padishah Emperor advises you. And he tells you: "If you want profits, you must 
rule." There is truth in these words, but I ask myself: "Who are the rabble and 
who are the ruled?"

  -- Muad'Dib's Secret Message to the Landsraad from "Arrakis Awakening" by the 
Princess Irulan
%
You cannot avoid the interplay of politics within an orthodox religion. This 
power struggle permeates the training, educating and disciplining of the 
orthodox community. Because of this pressure, the leaders of such a community 
inevitably must face that ultimate internal question: to succumb to complete 
opportunism as the price of maintaining their rule, or risk sacrificing 
themselves for the sake of the orthodox ethic.

  -- from "Muad'Dib: The Religious Issues" by the Princess Irulan
%
When law and duty are one, united by religion, you never become fully 
conscious, fully aware of yourself. You are always a little less than an 
individual.

  -- from "Muad'Dib: The Ninety-Nine Wonders of the Universe" by Princess Irulan
%
How often it is that the angry man rages denial of what his inner self is 
telling him.

  -- "The Collected Sayings of Muad'Dib" by the Princess Irulan
%
And it came to pass in the third year of the Desert War that Paul-Muad'Dib lay 
alone in the Cave of Birds beneath the kiswa hangings of an inner cell. And he 
lay as one dead, caught up in the revelation of the Water of Life, his being 
translated beyond the boundaries of time by the poison that gives life. Thus 
was the prophecy made true that the Lisan al-Gaib might be both dead and alive.

  -- "Collected Legends of Arrakis" by the Princess Irulan
%
And that day dawned when Arrakis lay at the hub of the
universe with the wheel poised to spin.

  -- from "Arrakis Awakening" by the Princess Irulan
%
And Muad'Dib stood before them, and he said: "Though we deem the captive dead, 
yet does she live. For her seed is my seed and her voice is my voice. And she 
sees unto the farthest reaches of possibility. Yea, unto the vale of the 
unknowable does she see because of me."

  -- from "Arrakis Awakening" by the Princess Irulan
%
